# django_telegram_reminder

./: .gitignore  bot_handler.py  env.template  pyproject.toml  send_reminders.py
reminder_project/: settings.py  urls.py
reminders/: admin.py  forms.py  models.py  urls.py  views.py
reminders/migrations/: 0001_initial.py  0002_reminder_is_sending.py  0003_reminder_sent_at.py  0004_alter_reminder_options_reminder_created_at_and_more.py
reminders/static/js/: reminders_app.js
reminders/static/reminders/js/: reminders_app.js  vue-datepicker.js  vue.global.prod.js
reminders/templates/: base.html
reminders/templates/reminders/: group_confirm_delete.html  group_form.html  group_list.html  instruction.html  reminder_confirm_delete.html  reminder_form.html  reminder_list.html  reminder_list_vue.html  useringroup_confirm_delete.html  useringroup_form.html  useringroup_list.html
static/css/: vue-multiselect.css
static/js/: vue-multiselect.js
static_root/js/: reminders_app.js
static_root/reminders/css/: vue-datepicker.css
static_root/reminders/js/: reminders_app.js
